[package]
name = "mvclient"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
authors = ["K. S. Ernest (iFire) Lee <ernest.lee@chibifire.com>", "Heyang Zhou <heyang.zhou@icloud.com>"]
description = "mvsqlite client library"
repository = "https://github.com/V-Sekai/mvsqlite.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvsqlite-core = { path = "../mvsqlite-core" }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
rand = "0.8.5"
hex = "0.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
futures = "0.3"
blake3 = "1.3.1"
foundationdb = { version = "0.8.0", features = ["embedded-fdb-include"] }
