[package]
name = "mvsqlite-core"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
authors = ["K. S. Ernest (iFire) Lee <ernest.lee@chibifire.com>", "Heyang Zhou <heyang.zhou@icloud.com>"]
description = "FDB-facing commit/page/namespace logic shared between mvstore and direct-FDB clients"
repository = "https://github.com/V-Sekai/mvsqlite.git"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
rand = "0.8.5"
foundationdb = { version = "0.8.0", features = ["embedded-fdb-include"] }
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
bytes = { version = "1.4.0", features = ["serde"] }
futures = "0.3"
blake3 = "1.3.1"
serde_json = "1"
zstd = "0.11.2"
moka = { version = "0.9.4", features = ["future"] }
constant_time_eq = "0.2.4"
heapless = { version = "0.7", features = ["serde"] }
itertools = "0.10.5"
