[package]
name = "mvsqlite-shard-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
mvclient = { path = "../mvclient", version = "0.3.1" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
rand = "0.8.5"
url = "2.3.1"
serde_json = "1"
reqwest = { version = "0.11.11", features = ["json"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
futures = "0.3"
