[package]
name = "mvstore-stress"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvclient = { path = "../mvclient", version = "0.3.1" }
mvsqlite-core = { path = "../mvsqlite-core" }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tracing = "0.1"
rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
bytes = "1.4.0"
futures = "0.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt", "json"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
blake3 = "1.3.1"
rpds = "0.12.0"
backtrace = "0.3.66"
